<resources>
    <string name="app_name">CityWeather</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prediction">Prediction</string>
    <string name="location">Location</string>
    <string name="sunrise">Sunrise</string>
    <string name="_05_52_am">05.52 AM</string>
    <string name="bogor">Bogor</string>
    <string name="tue_13_april_2021">Tue, 13 April 2021</string>
    <string name="c">°C</string>
    <string name="_32">32</string>
    <string name="_1011">1011</string>
    <string name="pressure">Pressure</string>
    <string name="_2_57">2,57</string>
    <string name="wind">Wind</string>
    <string name="humadity">Humadity</string>
    <string name="_66">66</string>
    <string name="_9000">9000</string>
    <string name="visibility">Visibility</string>
    <string name="sunset">Sunset</string>
    <string name="_05_52_pm">05.52 PM</string>
    <string name="image_view">image view</string>
</resources>